samples/_failures_safe/1761622309_76ba2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3824317.c: In function ‘main’:
./samples/SAFE/__tmp_c3824317.c:166:21: error: expected ‘)’ at end of input
  166 |     if (strlen(input
      |               ~     ^
      |                     )
./samples/SAFE/__tmp_c3824317.c:166:5: error: expected declaration or statement at end of input
  166 |     if (strlen(input
      |     ^~
